# Matterhorn-materials

./: .gitignore  CMakeLists.txt  database_utils.cpp  database_utils.h  databasemanager.cpp  databasemanager.h  editmaterialstreewidgetdialog.cpp  editmaterialstreewidgetdialog.h  editmaterialstreewidgetdialog.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  materialswindow.cpp  materialswindow.h  materialswindow.ui  renamenewmaterialstreewidgetitemdialog.cpp  treechangetracker.cpp
config/: db.config
resources/: resources.qrc
sources/: addextramaterialoptiondialog.cpp  addmaterialdialog.cpp  databasemanager.cpp  editmaterialstreewidgetdialog.cpp  logindialog.cpp  loginwindow.cpp  main.cpp  mainwindow.cpp  materialswindow.cpp  renamenewmaterialstreewidgetitemdialog.cpp  treechangetracker.cpp
sources/gui/: addextramaterialoptiondialog.ui  addmaterialdialog.ui  editmaterialstreewidgetdialog.ui  logindialog.ui  loginwindow.ui  mainwindow.ui  materialswindow.ui  renamenewmaterialstreewidgetitemdialog.ui
sources/include/: addextramaterialoptiondialog.h  addmaterialdialog.h  confirmationmessagebox.h  databasemanager.h  editmaterialstreewidgetdialog.h  extramaterialoption.h  logindialog.h  loginwindow.h  mainwindow.h  material.h  materialswindow.h  renamenewmaterialstreewidgetitemdialog.h  treechangetracker.h
